[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/tilth_project_tracker/tilth/scenes/project/project_crud/project_crud_popup.gd" type="Script" id=1]

[node name="ProjectCrudPopup" type="WindowDialog"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/scaleborder_size = 6
popup_exclusive = true
window_title = "Create project"
resizable = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelBorder" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VLayout" type="VBoxContainer" parent="PanelBorder"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BodyContainer" type="PanelContainer" parent="PanelBorder/VLayout"]
margin_right = 1010.0
margin_bottom = 250.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Padding" type="MarginContainer" parent="PanelBorder/VLayout/BodyContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1003.0
margin_bottom = 243.0
custom_constants/margin_right = 5
custom_constants/margin_top = 15
custom_constants/margin_left = 5
custom_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="PanelBorder/VLayout/BodyContainer/Padding"]
margin_left = 5.0
margin_top = 15.0
margin_right = 991.0
margin_bottom = 221.0
custom_constants/separation = 20

[node name="IdContainer" type="HBoxContainer" parent="PanelBorder/VLayout/BodyContainer/Padding/VBoxContainer"]
margin_right = 986.0
margin_bottom = 24.0

[node name="IdLabel" type="Label" parent="PanelBorder/VLayout/BodyContainer/Padding/VBoxContainer/IdContainer"]
margin_top = 5.0
margin_right = 100.0
margin_bottom = 19.0
rect_min_size = Vector2( 100, 0 )
text = "Id"

[node name="IdField" type="LineEdit" parent="PanelBorder/VLayout/BodyContainer/Padding/VBoxContainer/IdContainer"]
margin_left = 104.0
margin_right = 986.0
margin_bottom = 24.0
size_flags_horizontal = 3
editable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameContainer" type="VBoxContainer" parent="PanelBorder/VLayout/BodyContainer/Padding/VBoxContainer"]
margin_top = 44.0
margin_right = 986.0
margin_bottom = 86.0

[node name="NameLabel" type="Label" parent="PanelBorder/VLayout/BodyContainer/Padding/VBoxContainer/NameContainer"]
margin_right = 986.0
margin_bottom = 14.0
rect_min_size = Vector2( 100, 0 )
text = "Name"

[node name="NameField" type="LineEdit" parent="PanelBorder/VLayout/BodyContainer/Padding/VBoxContainer/NameContainer"]
margin_top = 18.0
margin_right = 986.0
margin_bottom = 42.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3

[node name="DescContainer" type="VBoxContainer" parent="PanelBorder/VLayout/BodyContainer/Padding/VBoxContainer"]
margin_top = 106.0
margin_right = 986.0
margin_bottom = 206.0
rect_min_size = Vector2( 0, 100 )

[node name="DescLabel" type="Label" parent="PanelBorder/VLayout/BodyContainer/Padding/VBoxContainer/DescContainer"]
margin_right = 986.0
margin_bottom = 14.0
rect_min_size = Vector2( 100, 0 )
text = "Description"

[node name="DescField" type="TextEdit" parent="PanelBorder/VLayout/BodyContainer/Padding/VBoxContainer/DescContainer"]
margin_top = 18.0
margin_right = 986.0
margin_bottom = 98.0
rect_min_size = Vector2( 0, 80 )
size_flags_horizontal = 3

[node name="ControlsContainer" type="PanelContainer" parent="PanelBorder/VLayout"]
margin_top = 250.0
margin_right = 1010.0
margin_bottom = 304.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Padding" type="MarginContainer" parent="PanelBorder/VLayout/ControlsContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1003.0
margin_bottom = 47.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="PanelBorder/VLayout/ControlsContainer/Padding"]
margin_left = 10.0
margin_top = 10.0
margin_right = 986.0
margin_bottom = 30.0
size_flags_vertical = 0
custom_constants/separation = 300

[node name="SaveButton" type="Button" parent="PanelBorder/VLayout/ControlsContainer/Padding/HBoxContainer"]
margin_right = 90.0
margin_bottom = 20.0
size_flags_horizontal = 0
text = "Save project"

[node name="DeleteButton" type="Button" parent="PanelBorder/VLayout/ControlsContainer/Padding/HBoxContainer"]
visible = false
margin_left = 388.0
margin_right = 490.0
margin_bottom = 20.0
size_flags_horizontal = 0
text = "Delete project"
